--- a/Alcohol_Consumption_ETL.ipynb
+++ b/Alcohol_Consumption_ETL.ipynb
@@ -1067,6 +1067,7 @@
    "outputs": [],
    "source": [
     "# remove 2010 from dataframe \n",
+    "# pull index values for rows where year is 2010\n",
     "indexNames = ac_new_df[ac_new_df['year'] == 2010 ].index\n",
     " \n",
     "# Delete these row indexes from dataFrame\n",
@@ -1175,6 +1176,7 @@
     }
    ],
    "source": [
+    "# set index to country_id\n",
     "ac_2016_df = ac_2016_df.set_index('country_id')\n",
     "\n",
     "ac_2016_df.head()"
