--- a/Alcohol_Consumption_ETL.ipynb
+++ b/Alcohol_Consumption_ETL.ipynb
@@ -1184,6 +1184,113 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del ac_2016_df['country_name']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>both_sexes</th>\n",
+       "      <th>male</th>\n",
+       "      <th>female</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>004</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>008</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>7.5</td>\n",
+       "      <td>12.5</td>\n",
+       "      <td>2.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>012</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>1.7</td>\n",
+       "      <td>0.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>020</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>11.3</td>\n",
+       "      <td>18</td>\n",
+       "      <td>4.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>024</th>\n",
+       "      <td>2016</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>10.7</td>\n",
+       "      <td>2.3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            year both_sexes  male female\n",
+       "country_id                              \n",
+       "004         2016        0.2   0.4      0\n",
+       "008         2016        7.5  12.5    2.6\n",
+       "012         2016        0.9   1.7    0.2\n",
+       "020         2016       11.3    18    4.7\n",
+       "024         2016        6.4  10.7    2.3"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ac_2016_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
