--- a/Alcohol_Consumption_ETL.ipynb
+++ b/Alcohol_Consumption_ETL.ipynb
@@ -464,6 +464,16 @@
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "pc_table = pd.DataFrame({\"country_id\": country_id,\n",
+    "                         \"country_name\": country_names})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -486,34 +496,32 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>country_id</th>\n",
        "      <th>country_name</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country_id</th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>533</td>\n",
+       "      <th>533</th>\n",
        "      <td>Aruba</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>004</td>\n",
+       "      <th>004</th>\n",
        "      <td>Afghanistan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>024</td>\n",
+       "      <th>024</th>\n",
        "      <td>Angola</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>660</td>\n",
+       "      <th>660</th>\n",
        "      <td>Anguilla</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>248</td>\n",
+       "      <th>248</th>\n",
        "      <td>Åland Islands</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -521,32 +529,24 @@
        "</div>"
       ],
       "text/plain": [
-       "  country_id   country_name\n",
-       "0        533          Aruba\n",
-       "1        004    Afghanistan\n",
-       "2        024         Angola\n",
-       "3        660       Anguilla\n",
-       "4        248  Åland Islands"
+       "             country_name\n",
+       "country_id               \n",
+       "533                 Aruba\n",
+       "004           Afghanistan\n",
+       "024                Angola\n",
+       "660              Anguilla\n",
+       "248         Åland Islands"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pc_table = pd.DataFrame({\"country_id\": country_id,\n",
-    "                         \"country_name\": country_names})\n",
+    "pc_table = pc_table.set_index('country_id')\n",
+    "\n",
     "pc_table.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# alcohol_consumption_clean_df['country_name'].unique()"
    ]
   },
   {
@@ -555,12 +555,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# country_table['country_name'].unique()"
+    "# alcohol_consumption_clean_df['country_name'].unique()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# country_table['country_name'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -570,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -580,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -667,7 +676,7 @@
        "Algeria       2016        0.9   1.7    0.2"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -679,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -800,7 +809,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -811,7 +820,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -843,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -930,7 +939,7 @@
        "Algeria       2016        0.9   1.7    0.2"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -950,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1041,7 +1050,7 @@
        "4      Algeria  2016        0.9   1.7    0.2        012"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1076,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1170,7 +1179,7 @@
        "024              Angola  2016        6.4  10.7    2.3"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
